# yahoo-stocks-crawler

./: .gitignore  LICENSE  README.md  example.env  pyproject.toml  pytest.ini  test.env
app/: crawl.py  crawl_v2.py  errors.py  healthcheck_selenium.py  main.py  settings.py  utils.py
app/dependencies/: __init__.py  cache.py  crawler.py
app/model/: __init__.py  regions_response.py  stocks_response.py
app/pages/: __init__.py  base_page.py  stocks_results_page.py  stocks_search_page.py
docker/: Dockerfile  docker-compose.yml  install-packages.sh
scripts/: add-to-path.sh  docker-compose.sh  run-tests.sh  start-redis.sh  start.sh  wget-seccomp.sh
tests/: __init__.py  conftest.py  test_e2e.py  test_parse_amount.py  test_yahoo_finance.py  utils.py
tests/e2e/: test_app.py
