[tool.poetry]
name = "yahoo-stocks-crawler"
version = "0.1.0"
description = ""
authors = ["Hugo Dzin <humodz065@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^3.141.0"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
pydantic = {extras = ["dotenv"], version = "^1.8.1"}
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
httpie = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
